[SIRIUSMAP-21] виджет со всеми любимыми местами

--- a/flutter_sirius_map/lib/l10n/app_en.arb
+++ b/flutter_sirius_map/lib/l10n/app_en.arb
@@ -1,5 +1,8 @@
 {
     "search" : "Search",
     "favorites" : "Favorites",
-    "language" : "EN"
+    "language" : "EN",
+    "edit" : "Edit",
+    "cancel" : "Cancel",
+    "add" : "Add"
 }
