--- a/flutter_sirius_map/lib/l10n/app_ru.arb
+++ b/flutter_sirius_map/lib/l10n/app_ru.arb
@@ -1,5 +1,8 @@
 {
     "search" : "Поиск",
     "favorites" : "Избранное",
-    "language" : "RU"
+    "language" : "RU",
+    "edit" : "Редактировать",
+    "cancel" : "Отмена",
+    "add" : "Добавить"
 }
