[SIRIUSMAP-44] qr code scanner - исправлен дизайн страницы

--- a/flutter_sirius_map/lib/l10n/app_en.arb
+++ b/flutter_sirius_map/lib/l10n/app_en.arb
@@ -4,5 +4,7 @@
     "language" : "EN",
     "edit" : "Edit",
     "cancel" : "Cancel",
-    "add" : "Add"
+    "add" : "Add",
+    "scan_qr_instruction" : "Scan nearest QRcode to determine your location",
+    "scan_qr":"QR scanner"
 }
