--- a/flutter_sirius_map/lib/l10n/app_ru.arb
+++ b/flutter_sirius_map/lib/l10n/app_ru.arb
@@ -4,5 +4,7 @@
     "language" : "RU",
     "edit" : "Редактировать",
     "cancel" : "Отмена",
-    "add" : "Добавить"
+    "add" : "Добавить",
+    "scan_qr_instruction" : "Отсканируйте ближайший QRcode для определения вашего местоположения",
+    "scan_qr":"QR сканнер"
 }
