finished choice page

--- a/flutter_sirius_map/lib/l10n/app_en.arb
+++ b/flutter_sirius_map/lib/l10n/app_en.arb
@@ -4,5 +4,6 @@
     "language" : "EN",
     "edit" : "Edit",
     "cancel" : "Cancel",
-    "add" : "Add"
+    "add" : "Add",
+    "buildRoute": "Build route"
 }
