--- a/flutter_sirius_map/lib/l10n/app_ru.arb
+++ b/flutter_sirius_map/lib/l10n/app_ru.arb
@@ -4,5 +4,6 @@
     "language" : "RU",
     "edit" : "Редактировать",
     "cancel" : "Отмена",
-    "add" : "Добавить"
+    "add" : "Добавить",
+    "buildRoute": "Построить маршрут"
 }
