--- a/flutter_sirius_map/lib/l10n/app_en.arb
+++ b/flutter_sirius_map/lib/l10n/app_en.arb
@@ -7,5 +7,6 @@
     "add" : "Add",
     "buildRoute": "Build route",
     "scan_qr_instruction" : "Scan nearest QRcode to determine your location",
-    "scan_qr":"QR scanner"
+    "scan_qr": "QR scanner",
+    "endRoute": "Я не потерялся"
 }
