--- a/flutter_sirius_map/lib/l10n/app_ru.arb
+++ b/flutter_sirius_map/lib/l10n/app_ru.arb
@@ -7,5 +7,6 @@
     "add" : "Добавить",
     "buildRoute": "Построить маршрут",
     "scan_qr_instruction" : "Отсканируйте ближайший QRcode для определения вашего местоположения",
-    "scan_qr":"QR сканнер"
+    "scan_qr":"QR сканнер",
+    "endRoute": "Я не потерялся"
 }
