--- a/flutter_sirius_map/lib/l10n/app_en.arb
+++ b/flutter_sirius_map/lib/l10n/app_en.arb
@@ -8,5 +8,6 @@
     "buildRoute": "Build route",
     "scan_qr_instruction" : "Scan nearest QRcode to determine your location",
     "scan_qr": "QR scanner",
-    "endRoute": "Я не потерялся"
+    "endRoute": "Я не потерялся",
+    "addFavoriteMistake": "Choose point on the map"
 }
