--- a/flutter_sirius_map/lib/l10n/app_ru.arb
+++ b/flutter_sirius_map/lib/l10n/app_ru.arb
@@ -8,5 +8,6 @@
     "buildRoute": "Построить маршрут",
     "scan_qr_instruction" : "Отсканируйте ближайший QRcode для определения вашего местоположения",
     "scan_qr":"QR сканнер",
-    "endRoute": "Я не потерялся"
+    "endRoute": "Я не потерялся",
+    "addFavoriteMistake": "Выбери точку на карте"
 }
